Source Repos/simple-autos-for-argo-cd-starter/rosa/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-autos
  # namespace: rob-wing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-autos
  template:
    metadata:
      labels:
        app: simple-autos
    spec:
      containers:
        - name: autos
          image: registry.gitlab.galvanize.com/cohorts/ent/sf/cse-rosa/cse-rosa-2025-02-24/student-work/rob-wing/simple-autos-rosa:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
