Source Repos/simple-autos-for-argo-cd-starter/rosa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-autos
  # namespace: rob-wing
spec:
  selector:
    app: simple-autos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
