Source Repos/simple-autos-for-argo-cd-starter/rosa/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simple-autos
spec:
  to:
    kind: Service
    name: simple-autos
    weight: 100
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
